syntax = "proto3";

package ScholarshipApi;

message ScholarshipItemRequest {
	int32 id = 1;
}

message ScholarshipItemsRequest {
	string ids = 1;
	int32 pageSize = 2;
	int32 pageIndex = 3;
}

message ScholarshipItemResponse {
	int32 id = 1;
	string name = 2;
    string description=3;
    double amount=4;
    string picture_file_name=5;
    string picture_uri=6;
    ScholarshipCurrency scholarship_currency=7;
    ScholarshipDuration scholarship_duration=8;
    ScholarshipEducationLevel scholarship_educationLevel=9;
    ScholarshipInterest scholarship_interest=10;
    ScholarshipLocation scholarship_location=15;
    int32 available_slots=11;
    int32 reslot_threshold=12;
    int32 max_slots_threshold=13;
    bool on_reapply=14;
}

message ScholarshipCurrency {
	int32 id = 1;
	string symbol = 2;
	string code = 3;
	string currency = 4;
}

message ScholarshipDuration {
	int32 id = 1;
	string duration = 2;
}

message ScholarshipEducationLevel {
	int32 id = 1;
	string educationLevel = 2;
}

message ScholarshipInterest {
	int32 id = 1;
	string interest = 2;
}

message ScholarshipLocation {
	int32 id = 1;
	string location = 2;
}

message PaginatedItemsResponse {
	int32 pageIndex = 1;
	int32 pageSize = 2;
	int64 count = 3;
	repeated ScholarshipItemResponse data = 4;
}

service Scholarship {
  rpc GetItemById (ScholarshipItemRequest) returns (ScholarshipItemResponse) {}
  rpc GetItemsByIds (ScholarshipItemsRequest) returns (PaginatedItemsResponse) {}
}